<resources>
    <string name="app_name">LibraryX</string>
    <string name="logo">logo</string>
    <string name="libraryx">LibraryX</string>
    <string name="see_all_books">See All Books</string>
    <string name="finished_books">Finished Books</string>
    <string name="wishlist">Wishlist</string>
    <string name="favourites">Favourites</string>
    <string name="about">ABOUT</string>
    <string name="currently_reading_books">Currently Reading Books</string>
    <string name="author">Author:</string>
    <string name="placeholder_des">placeholder des</string>
    <string name="cover_of_the_book">Cover of the book</string>
    <string name="want_to_read">Want to read</string>
    <string name="already_read">Already Read</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="pages">Pages:</string>
    <string name="title">Title:</string>
    <string name="delete">Delete</string>
    <string name="all_books">All Books</string>


    <array name="numbers">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>

    </array>
</resources>