<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="85dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleX="1.5"
        android:scaleY="1.5"

        android:src="@mipmap/logo"
         />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lemon"
        android:text="@string/libraryx"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="HardcodedText" />

    <Button
        app:cornerRadius="20dp"
        android:id="@+id/btnSeeAll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/see_all_books"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/btnCurrentlyReading"
        app:cornerRadius="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currently_reading_books"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnSeeAll"
        app:layout_constraintStart_toStartOf="@+id/btnSeeAll"
        app:layout_constraintTop_toBottomOf="@+id/btnSeeAll">


    </Button>


    <Button
        android:id="@+id/btnFinishedBooks"
        app:cornerRadius="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/finished_books"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnCurrentlyReading"
        app:layout_constraintStart_toStartOf="@+id/btnCurrentlyReading"
        app:layout_constraintTop_toBottomOf="@+id/btnCurrentlyReading" />

    <Button
        android:id="@+id/btnWishlist"
        app:cornerRadius="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wishlist"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnFinishedBooks"
        app:layout_constraintStart_toStartOf="@+id/btnFinishedBooks"
        app:layout_constraintTop_toBottomOf="@+id/btnFinishedBooks" />

    <Button
        android:id="@+id/btnFavourites"
        app:cornerRadius="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/favourites"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnWishlist"
        app:layout_constraintStart_toStartOf="@+id/btnWishlist"
        app:layout_constraintTop_toBottomOf="@+id/btnWishlist" />

    <Button
        android:id="@+id/btnAbout"
        app:cornerRadius="20dp"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/btnFavourites"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btnFavourites"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourites" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/numberPickerTheme"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </NumberPicker>

</androidx.constraintlayout.widget.ConstraintLayout>