<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/cover_of_the_book"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btnMarkCurrent"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/currently_reading"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@+id/imgCover"
                app:layout_constraintTop_toTopOf="@+id/imgCover" />

            <Button
                android:id="@+id/btnMarkWant"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/want_to_read"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnMarkCurrent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnMarkCurrent"
                app:layout_constraintTop_toBottomOf="@+id/btnMarkCurrent" />

            <Button
                android:id="@+id/btnMarkAlRead"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/already_read"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnMarkWant"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnMarkWant"
                app:layout_constraintTop_toBottomOf="@+id/btnMarkWant" />

            <Button
                android:id="@+id/btnMarkFavourite"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/add_to_favourites"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/btnMarkAlRead"
                app:layout_constraintStart_toStartOf="@+id/btnMarkAlRead"
                app:layout_constraintTop_toBottomOf="@+id/btnMarkAlRead" />

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btnMarkFavourite" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"

                app:layout_constraintBottom_toBottomOf="@+id/lblTitle"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/lblTitle" />

            <TextView
                android:id="@+id/lblAuthor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/author"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

            <TextView
                android:id="@+id/txtAuthorBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/lblAuthor" />

            <TextView
                android:id="@+id/lblPages"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pages"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/lblAuthor" />

            <TextView
                android:id="@+id/txtPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/lblPages" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <TextView
                android:id="@+id/txtShortDesBookView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="TextView"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/lblPages" />

            <TextView
                android:id="@+id/txtLongDesBookView"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/txtShortDesBookView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="380dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</RelativeLayout>